@@ -5,7 +5,7 @@ import net.minecraft.server.level.ServerLevel;
 import java.io.*;
 import java.net.URI;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Comparator;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipInputStream;
@@ -43,10 +43,10 @@ public class PackUpdate {
 						// Delete Old Folders
 						{
 
-							if (deleteOldPackFolder(level_server, Handcode.directory_config + "/custom_packs/TannyJung-Main-Pack") == false) {
+							if (deleteOldPackFolder(level_server, Handcode.directory_config + "/custom_packs/#TannyJung-Main-Pack") == false) {
 								return;
 							}
-							if (deleteOldPackFolder(level_server, Handcode.directory_config + "/custom_packs/[INCOMPATIBLE] TannyJung-Main-Pack") == false) {
+							if (deleteOldPackFolder(level_server, Handcode.directory_config + "/custom_packs/[INCOMPATIBLE] #TannyJung-Main-Pack") == false) {
 								return;
 							}
 
@@ -99,7 +99,7 @@ public class PackUpdate {
 
 	public static void message (ServerLevel level_server) {
 
-		File file = new File(Handcode.directory_config + "/custom_packs/TannyJung-Main-Pack/message.txt");
+		File file = new File(Handcode.directory_config + "/custom_packs/#TannyJung-Main-Pack/message.txt");
 		StringBuilder message = new StringBuilder();
 
 		if (file.exists() == true && file.isDirectory() == false) {
@@ -176,7 +176,7 @@ public class PackUpdate {
 
 			try {
 
-				Files.walk(Paths.get(path)).sorted(Comparator.reverseOrder()).forEach(source -> {
+				Files.walk(Path.of(path)).sorted(Comparator.reverseOrder()).forEach(source -> {
 
 					source.toFile().delete();
 
@@ -197,7 +197,7 @@ public class PackUpdate {
 
 	private static boolean createZIP (ServerLevel level_server) {
 
-		File file = new File(Handcode.directory_config + "/custom_packs/TannyJung-Main-Pack.zip");
+		File file = new File(Handcode.directory_config + "/custom_packs/#TannyJung-Main-Pack.zip");
 		ZipOutputStream out = null;
 
 		try {
@@ -219,7 +219,7 @@ public class PackUpdate {
 	private static boolean download (ServerLevel level_server) {
 
 		String download_from = "https://github.com/TannyJungMC/THT-tree_pack/archive/refs/heads/" + Handcode.tanny_pack_version_name.toLowerCase() + ".zip";
-		String download_to = Handcode.directory_config + "/custom_packs/TannyJung-Main-Pack.zip";
+		String download_to = Handcode.directory_config + "/custom_packs/#TannyJung-Main-Pack.zip";
 
 		try {
 
@@ -253,7 +253,7 @@ public class PackUpdate {
 
 	private static boolean unzip (ServerLevel level_server) {
 
-		File unzip = new File(Handcode.directory_config + "/custom_packs/TannyJung-Main-Pack.zip");
+		File unzip = new File(Handcode.directory_config + "/custom_packs/#TannyJung-Main-Pack.zip");
 		File unzip_to = new File(Handcode.directory_config + "/custom_packs");
 		byte[] buffer = new byte[1024];
 
@@ -325,7 +325,7 @@ public class PackUpdate {
 
 	private static boolean deleteZIP (ServerLevel level_server) {
 
-		File file = new File(Handcode.directory_config + "/custom_packs/TannyJung-Main-Pack.zip");
+		File file = new File(Handcode.directory_config + "/custom_packs/#TannyJung-Main-Pack.zip");
 
 		if (file.exists() == true) {
 
@@ -361,7 +361,7 @@ public class PackUpdate {
 	private static boolean renameFolder (ServerLevel level_server) {
 
 		File rename_from = new File(Handcode.directory_config + "/custom_packs/THT-tree_pack-" + Handcode.tanny_pack_version_name.toLowerCase());
-		File rename_to = new File(Handcode.directory_config + "/custom_packs/TannyJung-Main-Pack");
+		File rename_to = new File(Handcode.directory_config + "/custom_packs/#TannyJung-Main-Pack");
 
 		if (rename_from.renameTo(rename_to) == false) {
 
